# RUNE

./: .gitignore  AGENT_GUIDE.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  END_TO_END_WORKFLOW.md  LICENSE-APACHE  LICENSE-MIT  README.md  TEST_COVERAGE_REPORT.md  WHITEPAPER.md  cobertura.xml  zensical.toml
.claude/: CLAUDE.md
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  pages.yml  release.yml
diagrams/: README.md  architecture.d2  generate-diagrams.sh  regenerate-diagrams.sh  request-flow.d2
docs/: Gemfile  README.md  WHITEPAPER_RESEARCH.md  _config.yml  agent-guide.html  agent-guide.md  generate-assets.py  hot-reload-design.md  index.html  index.md  v0.4.0-plan.md  v0.4.0-progress.md  whitepaper.html  whitepaper.md
docs/assets/css/: style.scss
docs/css/: colors-rune.css  rune-theme.css  styles.css
docs/guide/: agent-guide.md
docs/js/: sidebar.js  theme.js
examples/: basic.rune  datalog_aggregation.rune  datalog_basics.rune  datalog_transitive.rune
rune-cli/: Cargo.toml
rune-cli/src/: main.rs
rune-cli/tests/: cli_integration_tests.rs
rune-core/: Cargo.toml
rune-core/benches/: cedar_integration.rs  datalog_evaluation.rs
rune-core/examples/: error_diagnostics.rs
rune-core/src/: datalog.rs  engine.rs  error.rs  facts.rs  lib.rs  parser.rs  policy.rs  reload.rs  request.rs  types.rs  watcher.rs
rune-core/src/datalog/: aggregation.rs  backends.rs  bridge.rs  diagnostics.rs  evaluation.rs  incremental.rs  lattice.rs  magic_sets.rs  mod.rs  planner.rs  provenance.rs  semi_naive.rs  types.rs  unification.rs  wcoj.rs
rune-core/src/monitoring/: collector.rs  exporter.rs  health.rs  metrics.rs  mod.rs  tracing_setup.rs
rune-core/src/monitoring/dashboards/: rune-overview.json  rune-performance.json
rune-core/tests/: integration_tests.rs
rune-core/tests/integration/: datalog_cedar_integration.rs  error_scenarios.rs  mod.rs  performance_stress.rs  real_world_scenarios.rs
rune-python/: Cargo.toml  README.md
rune-python/src/: lib.rs
rune-server/: Cargo.toml
rune-server/src/: api.rs  error.rs  handlers.rs  lib.rs  main.rs  metrics.rs  state.rs  tracing.rs
rune-server/tests/: integration_tests.rs
scripts/: README.md  benchmark-regression.sh  build-docs.py  reproduce-benchmarks.sh  validate-whitepaper.sh
site/: agent-guide.html  index.html  whitepaper.html
site/css/: styles.css
site/js/: sidebar.js
specs/origination/agentconfig-package/: IMPLEMENTATION_GUIDE.md  README.md  START_HERE.md
specs/origination/agentconfig-package/design/: agentconfig-advantages.md  agentconfig-design.md
specs/origination/agentconfig-package/examples/: real_world_example.ac  simple.ac
specs/origination/agentconfig-package/implementation/: agentconfig_implementation.py
specs/origination/agentconfig-package/tools/: QUICK_REFERENCE.md  project_structure.txt  pyproject.toml.template
specs/origination/rune-kit/: .gitignore  ARCHITECTURE.md  GRAMMAR.ebnf  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PROMPT.md  PROVIDERS.md  README.md  SPEC.md  pyproject.toml
specs/origination/rune-kit/examples/configs/: basic.rune
specs/origination/rune-kit/examples/providers/: openai_payload.expected.json
specs/origination/rune-kit/src/rune/: cli.py  engine.py  errors.py  ir.py  rules_parser.py  toml_parser.py  typing.py
specs/origination/rune-kit/src/rune/emitters/: anthropic.py  gemini.py  openai.py
specs/origination/rune-kit/tests/: test_demo.py
templates/: base.html  index.html
