[package]
name = "rune-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "rune"
path = "src/main.rs"

[dependencies]
rune-core = { path = "../rune-core" }

# CLI
clap = { workspace = true }
colored = { workspace = true }

# Performance
rayon = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }