[package]
name = "rune-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rune_core"
crate-type = ["lib", "cdylib"]

[dependencies]
# Parser
nom = { workspace = true }
winnow = { workspace = true }

# Performance
crossbeam = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }

# Cedar
cedar-policy = { workspace = true }
cedar-policy-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
metrics = { workspace = true }

# Memory optimization
memmap2 = { workspace = true }
# packed_simd = { workspace = true }  # Disabled - requires nightly

# Time
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
tracing-subscriber = { workspace = true }

# Benchmarks will be added later
# [[bench]]
# name = "authorization"
# harness = false
#
# [[bench]]
# name = "datalog"
# harness = false