[package]
name = "rune-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rune_core"
crate-type = ["lib", "cdylib"]

[dependencies]
# Parser
nom = { workspace = true }
winnow = { workspace = true }

# Performance
crossbeam = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
parking_lot = { workspace = true }
ahash = { workspace = true }
arc-swap = { workspace = true }
notify = { workspace = true }

# Cedar
cedar-policy = { workspace = true }
cedar-policy-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
metrics = { workspace = true }

# Memory optimization
memmap2 = { workspace = true }
# packed_simd = { workspace = true }  # Disabled - requires nightly

# Time
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "datalog_evaluation"
harness = false

[[bench]]
name = "cedar_integration"
harness = false