[package]
name = "rune-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
rune-core = { path = "../rune-core" }

# HTTP Server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
# Testing
reqwest = { version = "0.11", features = ["json"] }
tower = { version = "0.4", features = ["util"] }

[[bin]]
name = "rune-server"
path = "src/main.rs"